<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivityFragment">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_label_check_all_apis"
        android:id="@+id/btn_check_all_apis"
        android:onClick="checkAllAPIs"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_copy_image"
        android:id="@+id/btn_copy_image"
        android:layout_below="@+id/btn_check_all_apis"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="copyFileFromAssetsToAppDataPath" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_copy_image_inaccessible_path"
        android:id="@+id/btn_copy_to_invalid_path"
        android:layout_below="@+id/btn_copy_image"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="copyFileFromAssetsToInaccessiblePath" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_action_open_document"
        android:id="@+id/btn_action_open_document"
        android:layout_below="@+id/btn_copy_to_invalid_path"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="checkOpenDocumentAction" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_copy_to_pictures"
        android:id="@+id/btn_copy_to_pictures_path"
        android:layout_below="@+id/btn_action_open_document"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="copyFileFromAssetsToPicturesPath" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="clear"
        android:id="@+id/button"
        android:onClick="clearResults"
        android:layout_below="@+id/btn_copy_to_pictures_path"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <ScrollView
        android:id="@+id/scrl_main"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/button"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="clear"
                android:id="@+id/txt_results" />

            <ImageView
                android:id="@+id/img_result"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/txt_results" />

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
